syntax = "proto3";

package inventory;

service InventoryService {
  rpc CheckStock (CheckStockRequest) returns (StockResponse) {}
}

message CheckStockRequest {
  string productId = 1;
}

message StockResponse {
  string productId = 1;
  int32 quantity = 2;
  bool inStock = 3;
}
